fix: hide standalone AI icon on mobile post hover, add summarize to dot menu, and fix 1px layout shift on consecutive post hover
Changelog: fixed

--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -1078,6 +1078,10 @@
         &.same--user {
             padding: 0 0.5em 0 1.5em;
 
+            .post__time {
+                opacity: 0;
+            }
+
             &:hover,
             &.post--hovered,
             &.a11y--active {
